WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105732
[chromium] DrawingBuffer initialization loop breaks if completely out of memory
https://bugs.webkit.org/show_bug.cgi?id=105732
Summary
[chromium] DrawingBuffer initialization loop breaks if completely out of memory
Kenneth Russell
Reported
2012-12-24 18:57:23 PST
Brandon Jones discovered while debugging Issue 104733 and Issue 105367 that if s_currentResourceUsePixels is at the maximum, DrawingBuffer initialization will silently fail, and the WebGL context will silently display nothing. This behavior needs to be improved. At a minimum, context creation should probably report failure.
Attachments
Patch
(2.11 KB, patch)
2012-12-27 11:54 PST
,
Brandon Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brandon Jones
Comment 1
2012-12-27 11:54:10 PST
Created
attachment 180813
[details]
Patch
Kenneth Russell
Comment 2
2012-12-28 09:21:10 PST
Comment on
attachment 180813
[details]
Patch Looks good, but how was this tested?
Brandon Jones
Comment 3
2012-12-28 09:26:29 PST
(In reply to
comment #2
)
> (From update of
attachment 180813
[details]
) > Looks good, but how was this tested?
Using a modification of the test page for
Bug 105367
. I'm working on a more straightforward test, but I wanted to make sure this patch was available before I took my parental leave. The biggest issue with creating a robust test is that javascript can't query s_maximumResourceUsePixels, so any test script we make will have to assume that the limit is 16Mb, etc. If we change that behavior at all (make the maximum a percentage of total VRAM, for example) then the test will fail.
Kenneth Russell
Comment 4
2012-12-28 09:40:40 PST
Comment on
attachment 180813
[details]
Patch OK. Thanks for making this more robust. Let's continue to work on tests -- perhaps using window.internals or similar to do failure injection. r=me (I assume you wanted this committed.)
WebKit Review Bot
Comment 5
2012-12-28 09:46:32 PST
Comment on
attachment 180813
[details]
Patch Clearing flags on attachment: 180813 Committed
r138542
: <
http://trac.webkit.org/changeset/138542
>
WebKit Review Bot
Comment 6
2012-12-28 09:46:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug