[chromium] DrawingBuffer initialization loop breaks if completely out of memory https://bugs.webkit.org/show_bug.cgi?id=105732

Patch by Brandon Jones <bajones@chromium.org> on 2012-12-28
Reviewed by Kenneth Russell.

When DrawingBuffer allocation fails because s_currentResourceUsePixels is maxed out
it now forces WebGLRenderingContext creation to fail gracefully.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::create): On Chromium, check for failure to allocate a DrawingBuffer

Canonical link: https://commits.webkit.org/124026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138542 268f45cc-cd09-0410-ab3c-d52691b4dbfc